# utf-ircd

./: LICENSE  Rusnet-ircd-team  configure
codepages.universal/: ALT2UNI  ISO2UNI  MAC2UNI  MRO2UNI  UNI2ALT  UNI2ISO  UNI2KOI  UNI2MAC  UNI2MRO  UNI2TRN  UNI2WIN  WIN2UNI
common/: class_def.h  common_def.h  conversion.c  conversion.h.in  dbuf.c  dbuf_def.h  dbuf_ext.h  fileio.c  fileio_ext.h  match.c  match_ext.h  msg_def.h  numeric_def.h  os.h  packet.c  packet_ext.h  parse.c  parse_ext.h  patchlevel.h  send.c  send_ext.h  sm_loop.c  struct_def.h  support.c  support_def.h  support_ext.h  sys_def.h
contrib/: README  RULES  ircd.logrotate.in  libiconv-patch-1.9.1.cyr.tr  uk_UA
contrib/ircdwatch/: README  ircdwatch.8  ircdwatch.c
contrib/mkpasswd/: Makefile  README  mkpasswd.c
contrib/mod_passwd/: README  mod_passwd.c
contrib/tkserv/: README  proto.h  tkserv.c
doc/: Authors  BUGS  INSTALL.info  INSTALL.sgml  INSTALL.txt  Makefile  README  RELEASE_LOG  RELEASE_NOTES  SERVICE.sgml  SERVICE.txt  example.conf  example.rusnet.conf  example.tkserv.access  iauth.8  iauth.conf.5  irc.1  ircd.8  m4macros
doc/Nets/: RusNet
iauth/: a_conf.c  a_conf_def.h  a_conf_ext.h  a_defines.h  a_externs.h  a_io.c  a_io_ext.h  a_log.c  a_log_def.h  a_log_ext.h  a_struct_def.h  iauth.c  mod_dnsbl.c  mod_dnsbl_ext.h  mod_lhex.c  mod_lhex_ext.h  mod_pipe.c  mod_pipe_ext.h  mod_rfc931.c  mod_rfc931_ext.h  mod_socks.c  mod_socks_ext.h  mod_webproxy.c  mod_webproxy_ext.h
ircd/: buildm4  channel.c  channel_def.h  channel_ext.h  chkconf.c  class.c  class_ext.h  config_read.c  fileio.c  fileio.h  hash.c  hash_def.h  hash_ext.h  ircd.c  ircd_ext.h  ircd_signal.c  ircd_signal.h  list.c  list_ext.h  nameser_def.h  res.c  res_comp.c  res_comp_ext.h  res_def.h  res_ext.h  res_init.c  res_init_ext.h  res_mkquery.c  res_mkquery_ext.h  resolv_def.h  s_auth.c  s_auth_ext.h  s_bsd.c  s_bsd_ext.h  s_conf.c  s_conf_ext.h  s_debug.c  s_debug_ext.h  s_defines.h  s_err.c  (+25 more)
iserv/: i_defines.h  i_externs.h  i_io.c  i_io_ext.h  i_log.c  i_log_def.h  i_log_ext.h  iserv.c  iserv.h
rusnet/: DIRINFO  rusnet.h  rusnet_cmds.c  rusnet_cmds_ext.h  rusnet_codepages.c  rusnet_init.c  rusnet_misc.c  rusnet_virtual.c
rusnet-doc/: .#ChangeLog.1.84  BUGS  ChangeLog  ChangeLog.ru  INSTALL  INSTALL.ru  RELEASE_NOTES  RUSNET_DOC  RUSNET_DOC.ru  Roadmap  VersionReplies
support/: Makefile.in  config.guess  config.h.dist  config.sub  configure  configure.in  iauth.conf  install-sh  ircd.rmotd  mkdirhier  setup.h.in  ssl_cert  ssl_cert.conf  sums.in  tkconf.h.dist
